<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.weber.bhubbard.cs3270.mobilewar.view.ConnectBluetoothActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_discoverable"
                android:title="@string/make_discoverable" />
        </menu>
    </item>
    <item
        android:id="@+id/change_role"
        android:title="@string/make_host"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
