<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="1"
        android:rowCount="2">

        <ImageView
            android:id="@+id/imgTheirCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/their_last_card_desc"
            android:src="@drawable/b1fv"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txvTheirCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/their_card"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ff000000"
            android:textSize="12sp" />

    </GridLayout>

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:columnCount="1"
        android:rowCount="2">

        <ImageView
            android:id="@+id/imgMyCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:contentDescription="@string/my_last_card_desc"
            android:src="@drawable/b1fv"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txvMyCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:gravity="center"
            android:padding="4dp"
            android:singleLine="false"
            android:text="@string/my_card"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#ff000000"
            android:textSize="12sp" />
    </GridLayout>
</LinearLayout>
